--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,6 @@
 :root {
-  --clr-dark: #000;
-  --clr-light: #fff;
+  --clr-dark: #090713;
+  --clr-light: #e8e7e8;
   --clr-accent: #f43f70;
   --clr-rgba: rgba(244, 63, 112, 0.6);
 
